--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "koa": "^2.5.2",
     "vue": "2.5.13",
     "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
